Fediverse Tools for Joomla, version 2.0.1
================================================================================
# [HIGH] Typo in module causes it to display nothing (gh-10)

Fediverse Tools for Joomla, version 2.0.0
================================================================================
+ ActivityPub and WebFinger: make your Joomla site part of the Fediverse
# [LOW] Wrong grammatical case (nominative instead of genitive) in months in some languages e.g. Greek

Fediverse Tools for Joomla, version 1.0.2
================================================================================
+ Greek translation
~ Improved layout for reblogged (boosted) toots

Fediverse Tools for Joomla, version 1.0.1
================================================================================
~ Installation throws an error due to a typo in the post-installation script

Fediverse Tools for Joomla, version 1.0.0
================================================================================
+ Initial version