@@ -3,12 +3,16 @@
     <properties>
       <sourceFilesUrls>
         <item url="file://$PROJECT_DIR$/modules/site/fediversefeed/media/js/media.min.js" />
+        <item url="file://$PROJECT_DIR$/modules/site/fediversefeed/media/js/media.min.min.js" />
         <item url="file://$PROJECT_DIR$/plugins/content/fediverse/media/js/media.min.js" />
+        <item url="file://$PROJECT_DIR$/plugins/content/fediverse/media/js/media.min.min.js" />
       </sourceFilesUrls>
     </properties>
     <CLASSES>
       <root url="file://$PROJECT_DIR$/modules/site/fediversefeed/media/js/media.min.js" />
+      <root url="file://$PROJECT_DIR$/modules/site/fediversefeed/media/js/media.min.min.js" />
       <root url="file://$PROJECT_DIR$/plugins/content/fediverse/media/js/media.min.js" />
+      <root url="file://$PROJECT_DIR$/plugins/content/fediverse/media/js/media.min.min.js" />
     </CLASSES>
     <JAVADOC />
     <SOURCES />
